syntax = "proto3";

package adminCenter;
option go_package="./admin";

message Empty {}


// 后台用户登录
message LogOnRequest {
    int64 Account = 1; // 账号
    string Password = 2; // 密码
}

// 后台用户登录
message LogOnResponse {
  bool Token = 1;  // token
  bool NickName = 2;  // 昵称
  bool PhotoUrl = 3;  // 头像
}

// 刷新后台用户token
message RefreshTokenRequest {

}

// 刷新后台用户token
message RefreshTokenResponse {

}

// 获取用户菜单权限
message GetAdminMenuListRequest {
  int64 AdminId = 1;
}

// 获取用户菜单权限
message GetAdminMenuListResponse {

}

// 后台用户相关服务
service AdminService {
  rpc LogOn(LogOnRequest) returns(LogOnResponse); // 后台用户登录
  rpc RefreshToken(RefreshTokenRequest) returns(RefreshTokenResponse); // 刷新后台用户token
  rpc GetAdminMenuList(GetAdminMenuListRequest) returns(GetAdminMenuListResponse); // 获取用户菜单权限
}


message AdminInfo {
  int64 Id = 1;
  string Name = 2;
  int64 CreatedAt = 3;
  int64 UpdatedAt = 4;
  int32 State = 5;
  string Account = 6;
  string Password = 7;
  string Mobile = 8;
}

// 后台添加菜单
message AddMenuRequest {
  int64 Id = 1;
  int32 State = 2;
  string Name = 3;
  string Route = 4;
  int64 Pid = 5;
  string LevelIds = 6;
  string Remarks = 7;

}

// 后台添加菜单
message AddMenuResponse {
  int64 id = 1;
}

// 后台修改改单
message UpdateMenuRequest {}

// 后台修改改单
message UpdateMenuResponse {}

// 后台获取菜单列表
message GetMenuListRequest {}

// 后台获取菜单列表
message GetMenuListResponse {}

// 后台添加权限
message AddPermissionRequest {}

// 后台添加权限
message AddPermissionResponse {}

// 后台修改权限
message UpdatePermissionRequest {}

// 后台修改权限
message UpdatePermissionResponse {}

// 后台获取权限列表
message GetPermissionListRequest {}

// 后台添加角色
message GetPermissionListResponse {}

// 后台添加角色
message AddRoleRequest {}

// 后台添加菜单
message AddRoleResponse {}

// 后台修改角色
message UpdateRoleRequest {}

// 后台修改角色
message UpdateRoleResponse {}

// 后台获取角色列表
message GetRoleListRequest {}

// 后台获取角色列表
message GetRoleListResponse {}

// 后台添加后台用户
message AddAdminRequest {
  int64 Id = 1;
  string Name = 2;
  int32 State = 3;
  string Account = 4;
  string Password = 5;
  string Mobile = 6;
}

// 后台添加后台用户
message AddAdminResponse {
  int64 Id = 1;
}

// 后台修改用户信息
message UpdateAdminRequest {
  optional int64 Id = 1;
  optional int32 State = 3;
  optional string Account = 4;
  optional string Password = 5;
  optional string Mobile = 6;
  optional string Name = 7;
}

// 后台修改用户信息
message UpdateAdminResponse {
  int64 row = 1;
}

// 获取admin列表
message GetAdminListRequest {
  int64 Page = 1;
  int64 PageSize = 2;
  int32 State = 3;
}

// 获取admin列表
message GetAdminListResponse {
  repeated AdminInfo List = 1;
  int64 Total = 2;
  int64 Page = 3;
}

// 后台获取用户所有角色
message GetAdminRoleListRequest {}

// 后台获取用户所有角色
message GetAdminRoleListResponse {}

// 后台获取角色所有权限
message GetRolePermissionListRequest {}

// 后台获取角色所有权限
message GetRolePermissionListResponse {}

// 后台给用户分配角色
message BindAdminRoleRequest {}

// 后台给用户分配角色
message BindAdminRoleResponse {}

// 后台给角色分配权限
message BindRolePermissionRequest {}

// 后台给角色分配权限
message BindRolePermissionResponse {}

// 后台删除用户角色
message DelAdminRoleRequest {}

// 后台删除用户角色
message DelAdminRoleResponse {}

// 后台删除角色权限
message DelRolePermissionRequest {}

// 后台删除角色权限
message DelRolePermissionResponse {}



// 后台权限管理相关服务
service PermissionService {
  rpc AddMenu(AddMenuRequest) returns(AddMenuResponse); // 添加菜单
  rpc UpdateMenu(UpdateMenuRequest) returns(UpdateMenuResponse); // 修改菜单
  rpc GetMenuList(GetMenuListRequest) returns(GetMenuListResponse); // 获取菜单列表
  rpc AddPermission(AddPermissionRequest) returns(AddPermissionResponse); // 添加权限
  rpc UpdatePermission(UpdatePermissionRequest) returns(UpdatePermissionResponse); // 修改权限
  rpc GetPermissionList(GetPermissionListRequest) returns(GetPermissionListResponse); // 获取权限列表
  rpc AddRole(AddRoleRequest) returns(AddRoleResponse); // 添加角色
  rpc UpdateRole(UpdateRoleRequest) returns(UpdateRoleResponse); // 修改角色
  rpc GetRoleList(GetRoleListRequest) returns(GetRoleListResponse); // 获取角色列表
  rpc AddAdmin(AddAdminRequest) returns(AddAdminResponse); // 添加后台用户
  rpc UpdateAdmin(UpdateAdminRequest) returns(UpdateAdminResponse); // 修改用户信息
  rpc GetAdminList(GetAdminListRequest) returns(GetAdminListResponse); // 修改用户信息

  rpc GetAdminRoleList(GetAdminRoleListRequest) returns(GetAdminRoleListResponse); // 获取用户所有角色
  rpc GetRolePermissionList(GetRolePermissionListRequest) returns(GetRolePermissionListResponse); // 获取角色所有权限
  rpc BindAdminRole(BindAdminRoleRequest) returns(BindAdminRoleResponse); // 给用户分配角色
  rpc BindRolePermission(BindRolePermissionRequest) returns(BindRolePermissionResponse); // 给角色分配权限
  rpc DelAdminRole(DelAdminRoleRequest) returns(DelAdminRoleResponse); // 删除用户角色
  rpc DelRolePermission(DelRolePermissionRequest) returns(DelRolePermissionResponse); // 删除角色权限
}


message AddOperationLogRequest {
  string OperationType = 1; // 操作类型
  int64 AdminId = 2; // 操作人id
  string OperatorName = 3; // 操作人姓名
  string OperationDesc = 4; // 操作描述
  string ModuleName = 5; // 模块名称
  string Route = 6; // 路由
  string OperatorIp = 7; // 操作ip
  string Content = 8; // 操作内容
  int32 State = 9; // 操作内容
  string ErrMsg = 10; // 操作异常信息
}


message UpdateOperationLogRequest {
  string OperationType = 1; // 操作类型
  int64 AdminId = 2; // 操作人id
  string OperatorName = 3; // 操作人姓名
  string OperationDesc = 4; // 操作描述
  string ModuleName = 5; // 模块名称
  string Route = 6; // 路由
  string OperatorIp = 7; // 操作ip
  string Content = 8; // 操作内容
  int32 State = 9; // 操作内容
  string ErrMsg = 10; // 操作异常信息
  int64 Id = 11; // id
}


// 操作日志相关服务
service OperationLogService {
  rpc AddOperationLog(AddOperationLogRequest) returns(Empty); // 添加操作日志
  rpc UpdateOperationLog(UpdateOperationLogRequest) returns(Empty); // 修改操作日志状态
}